<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RecipeSearch">

    <TextView
        android:id="@+id/recipeText"
        android:layout_width="265dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/recipe_search"
        android:textColor="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164"/>

    <EditText
        android:id="@+id/ListOfProducts"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:hint="@string/ex_apple_sugar"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        android:autofillHints="">

    </EditText>

    <EditText
        android:id="@+id/numberOfSearch"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:hint="@string/ex_20"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"
        android:autofillHints="@string/ex_20">

    </EditText>

    <Button
        android:id="@+id/StartSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>